Spinner 추가 (ListPageActivity는 어떻게 해야할지 몰라 우선 제 코드 추가하면서 나머지는 주석 처리했습니다.)

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,19 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/bg_720"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.yskg.hellogangwon.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <Button
-        android:id="@+id/btn_gangneung"
+    <TextView
+        android:id="@+id/spinner_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Gangneung"
-        android:onClick="ListPage"/>
+        android:text="Select Location"
+        android:padding="5dp"/>
+
+    <com.rajasharan.widget.SearchableSpinner
+        android:id="@+id/main_spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_toRightOf="@+id/spinner_label"
+        android:padding="5dp"
+        app:list="@array/location">
+
+    </com.rajasharan.widget.SearchableSpinner>
 
 </RelativeLayout>
