--- a/app/src/main/res/layout/content_list_page.xml
+++ b/app/src/main/res/layout/content_list_page.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,11 +8,16 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="horizontal"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.yskg.hellogangwon.ListPageActivity"
     tools:showIn="@layout/activity_list_page">
-    
+
+    <TextView
+        android:id="@+id/txt_location"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Gang Neung"/>
+
     <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
@@ -20,4 +25,4 @@
 
     </ListView>
 
-</LinearLayout>
+</RelativeLayout>
