1. 가로전환 안되도록 2. MapAcitivity --> DetailActivity로 모두 옮김 (해당하는 xml 파일도 함께 옮김) 3. Select Location --> Where to 4. 스피너 위치 아래로 옮김 (크기 조정은 좀 더 봐야함) 5. 리스트페이지: rating bar 추가 6. 상세피이지: 지도위에 반투명으로 장소이름표시 / 갤러리 / 스크롤뷰

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,9 +11,10 @@
 
     <TextView
         android:id="@+id/spinner_label"
+        android:layout_alignParentBottom="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Select Location"
+        android:text="Where to"
         android:padding="5dp"/>
 
     <com.rajasharan.widget.SearchableSpinner
@@ -21,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_alignParentBottom="true"
         android:layout_toRightOf="@+id/spinner_label"
         android:padding="5dp"
         app:list="@array/location">
