--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -15,7 +15,32 @@
         android:src="@mipmap/ic_launcher"
         android:layout_alignParentLeft="true"/>
 
-    <TextView
+    <LinearLayout
+        android:id="@+id/list_linear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/img"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/txt"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="경포대"
+            android:textSize="20dp"
+            android:layout_alignParentTop="true"/>
+
+        <RatingBar
+            android:id="@+id/rating"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:isIndicator="true"
+            style="?android:attr/ratingBarStyleSmall"/>
+    </LinearLayout>
+
+    <!--<TextView
         android:id="@+id/txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -24,6 +49,13 @@
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/img"
         android:layout_toEndOf="@+id/img" />
+
+    <RatingBar
+        android:id="@+id/rating"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@+id/img"
+        android:layout_below="@+id/txt"/> -->
 
     <Button
         android:id="@+id/btn"
