--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -2,13 +2,22 @@
 <resources>
     <string-array name="location">
         <item>GANG NEUNG</item>
-        <item>JU MUN JIN</item>
-        <item>SA CHEON</item>
-        <item>YEON GOK</item>
-        <item>SEONG SAN</item>
-        <item>WANG SAN</item>
-        <item>OK GYE</item>
-        <item>GANG DONG</item>
-        <item>GU JEONG</item>
+        <item>GO SEONG</item>
+        <item>DONG HAE</item>
+        <item>SAM CHEOK</item>
+        <item>SOK CHO</item>
+        <item>YAGN GU</item>
+        <item>YANG YANG</item>
+        <item>YEONG WOL</item>
+        <item>WON JU</item>
+        <item>IN JE</item>
+        <item>JEONG SEON</item>
+        <item>CHEOR WON</item>
+        <item>CHUN CHEON</item>
+        <item>TAE BAEK</item>
+        <item>PYEONG CHANG</item>
+        <item>HONG CHEON</item>
+        <item>HWA CHEON</item>
+        <item>HOENG SEONG</item>
     </string-array>
 </resources>
