1. 유형별 아이콘 추가 (해변가, 레스토랑, 눈, 골프장, 호텔) 2. 스피너 크기 및 배경 색 지정 3. 리스트 페이지 상단 라인

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,11 +14,16 @@
         android:layout_alignParentBottom="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical"
         android:text="Where to"
+        android:textSize="15dp"
+        android:textColor="#f99a53"
+        android:background="#2f444444"
         android:padding="5dp"/>
 
     <com.rajasharan.widget.SearchableSpinner
         android:id="@+id/main_spinner"
+        android:background="#2f444444"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -27,4 +32,5 @@
         android:padding="5dp"
         app:list="@array/location">
     </com.rajasharan.widget.SearchableSpinner>
+
 </RelativeLayout>
