--- a/app/src/main/res/layout/content_list_page.xml
+++ b/app/src/main/res/layout/content_list_page.xml
@@ -12,14 +12,54 @@
     tools:context="com.example.yskg.hellogangwon.ListPageActivity"
     tools:showIn="@layout/activity_list_page">
 
-    <TextView
-        android:id="@+id/txt_location"
+    <LinearLayout
+        android:id="@+id/list_linear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Gang Neung"/>
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txt_location"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:background="#88ffc44d"
+            android:padding="5dp"
+            android:textSize="15dp"/>
+
+        <TextView
+            android:id="@+id/summer"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:background="#8899cc33"
+            android:padding="5dp"
+            android:textSize="15dp"/>
+
+        <TextView
+            android:id="@+id/fall"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:background="#88f99a53"
+            android:padding="5dp"
+            android:textSize="15dp"/>
+
+        <TextView
+            android:id="@+id/winter"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:background="#88afafaf"
+            android:padding="5dp"
+            android:textSize="15dp"/>
+
+    </LinearLayout>
 
     <ListView
         android:id="@+id/list"
+        android:layout_below="@+id/list_linear"
+        android:paddingTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     </ListView>
