--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:src="@mipmap/ic_launcher"
+        android:src="@mipmap/ic_snow"
         android:layout_alignParentLeft="true"/>
 
     <LinearLayout
@@ -39,23 +39,6 @@
             android:isIndicator="true"
             style="?android:attr/ratingBarStyleSmall"/>
     </LinearLayout>
-
-    <!--<TextView
-        android:id="@+id/txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="경포대"
-        android:textSize="20dp"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/img"
-        android:layout_toEndOf="@+id/img" />
-
-    <RatingBar
-        android:id="@+id/rating"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toLeftOf="@+id/img"
-        android:layout_below="@+id/txt"/> -->
 
     <Button
         android:id="@+id/btn"
