--- a/app/src/main/res/layout/content_list_page.xml
+++ b/app/src/main/res/layout/content_list_page.xml
@@ -4,10 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.yskg.hellogangwon.ListPageActivity"
     tools:showIn="@layout/activity_list_page">
@@ -22,7 +18,7 @@
             android:id="@+id/txt_location"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:background="#88ffc44d"
             android:padding="5dp"
             android:textSize="15dp"/>
@@ -31,7 +27,7 @@
             android:id="@+id/summer"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:background="#8899cc33"
             android:padding="5dp"
             android:textSize="15dp"/>
@@ -40,7 +36,7 @@
             android:id="@+id/fall"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:background="#88f99a53"
             android:padding="5dp"
             android:textSize="15dp"/>
@@ -49,7 +45,7 @@
             android:id="@+id/winter"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:background="#88afafaf"
             android:padding="5dp"
             android:textSize="15dp"/>
