--- a/app/src/main/res/layout/content_tip_list_page.xml
+++ b/app/src/main/res/layout/content_tip_list_page.xml
@@ -1,57 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_tip_list_page">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:orientation="vertical" android:layout_width="match_parent"
+android:layout_height="wrap_content">
 
     <LinearLayout
+        android:id="@+id/list_linear"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-        <LinearLayout
-            android:id="@+id/detail_linear"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+        <TextView
+            android:id="@+id/txt_location"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="30dp"
+            android:background="#88ffc44d"
+            android:padding="5dp"
+            android:textSize="15dp"/>
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="30dp"
-                android:background="#88ffc44d"
-                android:padding="5dp"
-                android:textSize="15dp"/>
+        <TextView
+            android:id="@+id/summer"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="30dp"
+            android:background="#8899cc33"
+            android:padding="5dp"
+            android:textSize="15dp"/>
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="30dp"
-                android:background="#8899cc33"
-                android:padding="5dp"
-                android:textSize="15dp"/>
+        <TextView
+            android:id="@+id/fall"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="30dp"
+            android:background="#88f99a53"
+            android:padding="5dp"
+            android:textSize="15dp"/>
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="30dp"
-                android:background="#88f99a53"
-                android:padding="5dp"
-                android:textSize="15dp"/>
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="30dp"
-                android:background="#88afafaf"
-                android:padding="5dp"
-                android:textSize="15dp"/>
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/winter"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="30dp"
+            android:background="#88afafaf"
+            android:padding="5dp"
+            android:textSize="15dp"/>
 
     </LinearLayout>
 
-</ScrollView>
+</LinearLayout>
