--- a/app/src/main/res/layout/recycler_view_card_item.xml
+++ b/app/src/main/res/layout/recycler_view_card_item.xml
@@ -25,9 +25,8 @@
             <ImageView
                 android:id="@+id/img_thumbnail"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:scaleType="fitXY"
-                android:layout_marginBottom="50dp"/>
+                android:layout_height="150dp"
+                android:scaleType="fitXY"/>
 
             <TextView
                 android:id="@+id/tv_nature"
@@ -42,7 +41,7 @@
                 android:textColor="#fff"
                 android:textSize="20dp"
                 android:text="Test"
-                android:layout_alignBottom="@+id/img_thumbnail"
+                android:layout_alignTop="@+id/img_thumbnail"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true" />
 
@@ -55,13 +54,28 @@
                 android:paddingTop="5dp"
                 android:paddingBottom="2dp"
                 android:alpha="0.8"
+                android:textColor="#f99a53"
+                android:textSize="15dp"
+                android:text="Test"
+                android:layout_below="@+id/img_thumbnail"/>
+
+            <TextView
+                android:id="@+id/kor_expression"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="5dp"
+                android:paddingBottom="2dp"
+                android:alpha="0.8"
                 android:textColor="#444444"
                 android:textSize="15dp"
                 android:text="Test"
-                android:layout_below="@+id/tv_nature"
+                android:layout_below="@+id/tv_des_nature"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentBottom="true" />
+
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
