--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -59,7 +59,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="200dp">
 
                 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                     xmlns:tools="http://schemas.android.com/tools"
@@ -72,8 +72,9 @@
 
                 <TextView
                     android:id="@+id/detail_place"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="#07000000"
                     android:text="GANG NEUNG"
                     android:textSize="20dp"
                     android:textColor="#444444"/>
@@ -98,7 +99,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="5dp"
-                    android:text="Websites"
+                    android:text="Home page"
                     android:textColor="#f99a53"/>
 
                 <TextView
@@ -108,7 +109,9 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginBottom="10dp"
                     android:text="www.daum.net"
-                    android:textColor="#444444"/>
+                    android:autoLink="web"
+                    android:textColor="#444444"
+                    android:textColorLink="#444444"/>
             </LinearLayout>
 
             <LinearLayout
@@ -132,7 +135,8 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="5dp"
                     android:text="Telephone"
-                    android:textColor="#f99a53"/>
+                    android:textColor="#f99a53"
+                    />
 
                 <TextView
                     android:id="@+id/txt_number"
@@ -141,7 +145,9 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginBottom="10dp"
                     android:text="033-123-4567"
-                    android:textColor="#444444"/>
+                    android:autoLink="phone"
+                    android:textColor="#444444"
+                    android:textColorLink="#444444"/>
 
             </LinearLayout>
 
@@ -195,12 +201,63 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/detailName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
+                android:text="Description"
+                android:textColor="#f99a53"
+                />
+
+            <TextView
                 android:id="@+id/detail_txtView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
                 android:textColor="#444444"
-                android:text="description"/>
+                android:text="description"
+                android:layout_marginLeft="10dp"
+                android:layout_marginBottom="10dp"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="#afafaf">
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="15dp"
+                android:background="#E7E7E7">
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="#afafaf">
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/attractionsName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
+                android:text="Attractions"
+                android:textColor="#f99a53"/>
+
+            <TextView
+                android:id="@+id/attractions"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:textColor="#444444"
+                android:text="attractions"
+                android:layout_marginLeft="10dp"
+                android:layout_marginBottom="10dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
