--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,11 +15,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:text="Where to"
-        android:textSize="15dp"
-        android:textColor="#f99a53"
-        android:background="#2f444444"
-        android:padding="5dp"/>
+        android:text="Start your"
+        android:textSize="25dp"
+        android:textColor="#444444"
+        android:padding="5dp"
+        />
 
     <com.rajasharan.widget.SearchableSpinner
         android:id="@+id/main_spinner"
