--- a/app/src/main/res/layout/recycler_view_card_item.xml
+++ b/app/src/main/res/layout/recycler_view_card_item.xml
@@ -49,8 +49,8 @@
                 android:id="@+id/eng_expression"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 android:paddingTop="5dp"
                 android:paddingBottom="2dp"
                 android:alpha="0.8"
@@ -63,25 +63,22 @@
                 android:id="@+id/kor_expression"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 android:paddingTop="5dp"
                 android:paddingBottom="2dp"
                 android:alpha="0.8"
                 android:textColor="#444444"
                 android:textSize="15dp"
                 android:text="Test"
-                android:layout_below="@+id/eng_expression"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentBottom="true" />
+                android:layout_below="@+id/eng_expression"/>
 
             <TextView
                 android:id="@+id/kor_sound"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 android:paddingTop="5dp"
                 android:paddingBottom="2dp"
                 android:alpha="0.8"
