--- a/app/src/main/res/layout/recycler_view_card_item.xml
+++ b/app/src/main/res/layout/recycler_view_card_item.xml
@@ -56,6 +56,7 @@
                 android:alpha="0.8"
                 android:textColor="#f99a53"
                 android:textSize="15dp"
+                android:textStyle="bold"
                 android:text="Test"
                 android:layout_below="@+id/img_thumbnail"/>
 
